--- a/app/src/main/res/layout/fragment_patient_display.xml
+++ b/app/src/main/res/layout/fragment_patient_display.xml
@@ -21,11 +21,79 @@
         android:layout_margin="15dp"
         android:orientation="vertical" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/add_patient_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add"
+                    android:background="#EE3E38"
+                    android:textColor="@color/white"
+                    android:onClick="@{() -> patientDisplayViewModel.addPatientCardClicked()}"
+                    android:layout_gravity="left" />
+
+                <Button
+                    android:id="@+id/delete_all_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Delete All"
+                    android:background="#EE3E38"
+                    android:layout_marginStart="10dp"
+                    android:textColor="@color/white"
+                    android:onClick="@{() -> patientDisplayViewModel.clearAll()}"
+                    android:layout_gravity="left" />
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="right"
+                android:paddingBottom="10dp">
+
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/logout_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:background="#EE3E38"
+                android:layout_marginStart="105dp"
+                android:onClick="@{() -> patientDisplayViewModel.goToLogin()}"
+                android:text="Logout"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
+
+
+
 <!--        <androidx.appcompat.widget.Toolbar-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            app:navigationIcon="@drawable/shr_menu"-->
 <!--            app:title="IvyApp"/>-->
+<!--        <TextView-->
+<!--            android:id="@+id/patient_id_text_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:textColor="@color/red" />-->
 
         <EditText
             android:id="@+id/first_name_text"
@@ -97,31 +165,36 @@
                 android:text="@={patientDisplayViewModel.clearAllOrDeleteButtonText}"
                 android:onClick="@{() -> patientDisplayViewModel.clearAllOrDelete()}"
                 android:layout_marginStart="10dp" />
+
+            <Button
+                android:id="@+id/back_to_patient_cards"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#EE3E38"
+                android:textColor="@color/white"
+                android:text="Back"
+                android:onClick="@{() -> patientDisplayViewModel.onBackToPatientCard()}"
+                android:layout_marginStart="10dp" />
         </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/list_of_patients_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="List of Patients"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            android:textStyle="bold" />
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/patient_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="306dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/logout_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Logout"
-                android:background="#EE3E38"
-                android:textColor="@color/white"
-                android:onClick="@{() -> patientDisplayViewModel.goToLogin()}"/>
-
-        </LinearLayout>
 
     </LinearLayout>
 
