--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -14,6 +14,10 @@
             android:id="@+id/notificationDisplayFragment"
             android:title="Notifications" />
 
+<!--        <item-->
+<!--            android:id="@+id/updatePatientFragment"-->
+<!--            android:title="Update" />-->
+
 
 <!--        <item-->
 <!--            android:id="@+id/loginFragment"-->
