--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -14,6 +14,14 @@
             android:id="@+id/notificationDisplayFragment"
             android:title="Notifications" />
 
+        <item
+            android:id="@+id/faqFragment"
+            android:title="FAQ" />
+
+        <item
+            android:id="@+id/aboutFragment2"
+            android:title="About" />
+
 <!--        <item-->
 <!--            android:id="@+id/updatePatientFragment"-->
 <!--            android:title="Update" />-->
